tests/spec/emit/snapshots/range_index_evaluated_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn make_range() -> Range<int> {
    fmt.Println("range")
    1..3
  }
  
  fn main() {
    let items = [0, 1, 2, 3, 4]
    let sub = items[make_range()]
    fmt.Println(sub.length())
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func makeRange() lisette.Range[int] {
	fmt.Println("range")
	return lisette.Range[int]{
		Start: 1,
		End:   3,
	}
}

func main() {
	items := []int{0, 1, 2, 3, 4}
	range_1 := makeRange()
	sub := items[range_1.Start:range_1.End:range_1.End]
	fmt.Println(len(sub))
}
