tests/spec/emit/snapshots/range_ref_field_access.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn get_start(r: Ref<Range<int>>) -> int {
    r.start
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getStart(r *lisette.Range[int]) int {
	return r.Start
}
