tests/spec/emit/snapshots/range_rhs_index_target_frozen.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn lo() -> int { 0 }
  
  fn run() -> int {
    let mut rs = [0..0, 0..0]
    let mut i = 0
    let bump = || -> int { i = 1; 5 }
    rs[i] = lo()..bump()
    rs[0].end
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func lo() int {
	return 0
}

func run() int {
	rs := []lisette.Range[int]{
		{
			Start: 0,
			End:   0,
		},
		{
			Start: 0,
			End:   0,
		},
	}
	i := 0
	bump := func() int {
		i = 1
		return 5
	}
	idx := i
	rs[idx] = lisette.Range[int]{
		Start: lo(),
		End:   bump(),
	}
	return rs[0].End
}
