tests/spec/emit/snapshots/range_value_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn bump(i: Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let r = i..bump(&i)
    let _ = r
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	range_1 := i
	r := lisette.Range[int]{
		Start: range_1,
		End:   bump(&i),
	}
	_ = r
}
