tests/spec/emit/snapshots/range_variable_slice_base_call_evaluated_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make() -> Slice<int> { [1, 2, 3] }
  
  fn run() -> int {
    let r = 1..
    let s = make()[r]
    s.length()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func make_() []int {
	return []int{1, 2, 3}
}

func run() int {
	r := lisette.RangeFrom[int]{Start: 1}
	base := make_()
	s := base[r.Start:len(base):len(base)]
	return len(s)
}
