tests/spec/emit/snapshots/raw_string_empty.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    r""
  }
---
package main

func test() string {
	return ``
}
