tests/spec/emit/snapshots/raw_string_multiline.snap
---
source: tests/spec/emit/literals.rs
description: |
  fn test() -> string {
    r"
  SELECT foo FROM bar
  WHERE id = 100
  "
  }
---
package main

func test() string {
	return `
SELECT foo FROM bar
WHERE id = 100
`
}
