tests/spec/emit/snapshots/raw_string_multiline_with_backtick_falls_back_to_double_quoted.snap
---
source: tests/spec/emit/literals.rs
description: |
  fn test() -> string {
    r"line1
  has `tick
  line3"
  }
---
package main

func test() string {
	return "line1\nhas `tick\nline3"
}
