tests/spec/emit/snapshots/raw_string_pattern_emit.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test(s: string) -> int {
    match s {
      r"\d+" => 1,
      _ => 0,
    }
  }
---
package main

func test(s string) int {
	if s == `\d+` {
		return 1
	}
	return 0
}
