tests/spec/emit/snapshots/raw_string_simple.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    r"abc"
  }
---
package main

func test() string {
	return `abc`
}
