tests/spec/emit/snapshots/raw_string_with_backtick_falls_back_to_double_quoted.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    r"has `tick"
  }
---
package main

func test() string {
	return "has `tick"
}
